# dict-from-g2p

./: .gitignore  CHANGELOG.md  CITATION.cff  Pipfile  README.md  deploy.sh  pyproject.toml  setup.cfg
src/dict_from_g2p/: argparse_helper.py  cli.py  main.py
src/dict_from_g2pE/: __init__.py  argparse_helper.py  cli.py  core.py  main.py
src/dict_from_g2pE_tests/core/: test_download_nltk_data.py  test_get_pronunciations.py  test_transcribe_with_g2pE.py
src/dict_from_g2pE_tests/test_main_py/: test_get_pronunciations.py
